# pq_lib

./: .gitignore  ARCHITECTURE_REFACTORING_PLAN.md  CHANGELOG.md  CODE_REVIEW_REPORT.md  Cargo.toml  ELEGANT_ARCHITECTURE.md  LICENSE-APACHE  LICENSE-MIT  README.md  deploy_to_github.ps1
.github/workflows/: ci.yml
benches/: pqc_benchmarks.rs
examples/: basic_usage.rs  elegant_api_demo.rs  migration_demo.rs  performance_demo.rs  substrate_integration.rs
src/: algorithm.rs  builders.rs  compat.rs  domain.rs  error.rs  keypair.rs  lib.rs  macros.rs  main.rs  policy.rs  pqc.rs  serialization.rs  signature.rs  signer.rs  traits.rs  typed.rs  typestate.rs
symbios-mvp/: ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.loadgen  LICENSE  LICENSE_CHECK.md  LIMITATIONS.md  Makefile  PRODUCTION_README.md  README.md  SDK_README.md  benchmarks.md  build_errors.txt  cargo_test.txt  cargo_test_release.txt  check_setup.ps1  demo.ps1  demo_launch.ps1  demo_node.py  docker-compose.yml  load_generator.py  protocol.md  run_100k_demo_simple.ps1  run_benchmark.ps1  run_dag_demo.sh  run_demo.sh  run_production.sh  run_research_demo.ps1  run_smart_dag_demo.sh  run_tps_demo.ps1  run_tps_demo.sh  simple_benchmark.ps1  simple_node.py  test_dag.py  test_pqcrypto.py
symbios-mvp/benches/: consensus_benchmark.rs  tps.rs
symbios-mvp/examples/: sdk_usage.rs
symbios-mvp/monitoring/: prometheus.yml
symbios-mvp/monitoring/grafana/dashboards/: symbios-dashboard.json
symbios-mvp/src/: adaptive_crypto.rs  advanced_consensus.rs  ai_dos_protection.rs  consensus.rs  crypto_audit.rs  dag_mempool.rs  dag_optimization.rs  economics.rs  efficient_execution.rs  formal_verification.rs  health_monitor.rs  hotstuff_consensus.rs  hsm.rs  hybrid_crypto.rs  kms.rs  lib.rs  lightweight_consensus.rs  main.rs  mempool.rs  metrics.rs  minimal_dag.rs  minimal_storage.rs  network.rs  network_demo.rs  parallel_execution.rs  pqcrypto.rs  production_consensus.rs  production_node.rs  proptests.rs  sdk.rs  security_audit.rs  simple_node.rs  state_machine.rs  state_sync.rs  storage.rs  types.rs
symbios-mvp/tests/: dag_tests.rs  integration_tests.rs  smart_dag_mempool.rs
symbios-pqc/: Cargo.toml  README.md
symbios-pqc/benches/: pqc_benchmarks.rs
symbios-pqc/examples/: basic_usage.rs
symbios-pqc/src/: algorithm.rs  error.rs  keypair.rs  lib.rs  policy.rs  serialization.rs  signature.rs
tests/: elegant_architecture_tests.rs  integration_tests.rs  property_tests.rs
