[package]
name = "pq_lib"
version = "0.1.0"
edition = "2021"
authors = ["pq_lib Team"]
description = "Post-Quantum Cryptography library for blockchain applications"
license = "Apache-2.0 OR MIT"
keywords = ["cryptography", "post-quantum", "blockchain", "signatures", "pqc"]
categories = ["cryptography", "algorithms"]
repository = "https://github.com/magish2112/pq_lib"
documentation = "https://docs.rs/pq_lib"
readme = "README.md"

[lib]
name = "pq_lib"
path = "src/lib.rs"

[features]
default = ["std"]
std = []
no_std = []
# ed25519 = ["ed25519-dalek"]
ml-dsa = []
slh-dsa = []

[dependencies]
# Core cryptographic primitives (minimal for basic functionality)
# rand = { version = "0.8", default-features = false }
# sha3 = { version = "0.10", default-features = false }

# Security utilities (commented out due to linker issues)
# zeroize = { version = "1.7", features = ["zeroize_derive"] }

# Post-quantum cryptography (NIST algorithms)
# Note: Using mock implementation for now due to feature compatibility issues
# pqcrypto = { version = "0.15", default-features = false, optional = true }
# pqcrypto-traits = { version = "0.3", optional = true }

# Classic cryptography for hybrid approach (optional for minimal builds)
# ed25519-dalek = { version = "2.1", default-features = false, optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio = { version = "1.0", features = ["full"] }
tokio-test = "0.4"
proptest = "1.0"
hex = "0.4"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

