[package]
name = "symbios-mvp"
version = "0.1.0"
edition = "2021"

[lib]
name = "symbios_mvp"
path = "src/lib.rs"

[[bin]]
name = "symbios-mvp"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
sha3 = "0.10"
rand = "0.8"
ed25519-dalek = "2.1"
signature = "2.2"
hex = "0.4"
futures = "0.3"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
prometheus = "0.13"
lazy_static = "1.4"
warp = "0.3"
libp2p = { version = "0.53", features = ["tcp", "dns", "kad", "gossipsub", "request-response", "identify", "noise", "yamux", "ed25519", "tokio", "macros"] }
async-trait = "0.1"
# rocksdb = "0.21"  # Temporarily disabled for demo
tokio-util = { version = "0.7", features = ["codec"] }
futures-util = "0.3"
bytes = "1.5"
tempfile = "3.8"
pqcrypto = { version = "0.15", default-features = false }
chrono = { version = "0.4", features = ["serde"] }

[features]
default = []
production = []

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"
proptest = "1.0"