[package]
name = "symbios-pqc"
version = "0.1.0"
edition = "2021"
authors = ["Symbios Network Team"]
description = "Post-Quantum Cryptography library for blockchain applications"
license = "Apache-2.0 OR MIT"
keywords = ["cryptography", "post-quantum", "blockchain", "signatures", "pqc"]
categories = ["cryptography", "algorithms"]
repository = "https://github.com/magish2112/symbios-pqc"
documentation = "https://docs.rs/symbios-pqc"
readme = "README.md"

[lib]
name = "symbios_pqc"
path = "src/lib.rs"

[[bench]]
name = "pqc_benchmarks"
harness = false

[features]
default = ["std", "ed25519"]
std = ["serde/std", "serde_cbor/std"]
no_std = []
ed25519 = ["ed25519-dalek"]
ml-dsa = []
ml-kem = []
slh-dsa = []
serde-support = ["serde", "serde_cbor"]

[dependencies]
# Core cryptographic primitives
ed25519-dalek = { version = "2.1", default-features = false, optional = true }
signature = "2.2"

# Serialization
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }
serde_cbor = { version = "0.11", default-features = false, optional = true }

# Utilities
zeroize = { version = "1.7", features = ["zeroize_derive"] }
rand = { version = "0.8", default-features = false }
sha3 = { version = "0.10", default-features = false }

# Async support
async-trait = "0.1"
futures = { version = "0.3", default-features = false }

# Error handling
thiserror = { version = "1.0", default-features = false }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio = { version = "1.0", features = ["full"] }
tokio-test = "0.4"
proptest = "1.0"
hex = "0.4"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

